--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -11,7 +11,7 @@
 -i https://pypi.org/simple
 acme==1.29.0
 anyio==3.6.1; python_full_version >= '3.6.2'
-attrs==21.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+attrs==22.1.0; python_version >= '3.5'
 black==22.6.0
 certifi==2022.6.15; python_version >= '3.6'
 cffi==1.15.1
@@ -25,6 +25,7 @@ idna==3.3; python_version >= '3.5'
 iniconfig==1.1.1
 josepy==1.13.0
 mypy-extensions==0.4.3
+mypy==0.971
 packaging==21.3; python_version >= '3.6'
 pathspec==0.9.0
 platformdirs==2.5.2; python_version >= '3.7'
@@ -39,7 +40,10 @@ pytz==2022.1
 requests-toolbelt==0.9.1
 requests==2.28.1; python_version >= '3.7' and python_version < '4'
 rfc3986[idna2008]==1.5.0
+setuptools==63.4.2; python_version >= '3.7'
 sniffio==1.2.0; python_version >= '3.5'
 tomli==2.0.1; python_full_version < '3.11.0a7'
+types-requests==2.28.8
+types-urllib3==1.26.22
 typing-extensions==4.3.0; python_version < '3.10'
 urllib3==1.26.11; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5' and python_version < '4'
