--- a/requirements.txt
+++ b/requirements.txt
@@ -24,5 +24,6 @@ pytz==2022.1
 requests-toolbelt==0.9.1
 requests==2.28.1; python_version >= '3.7' and python_version < '4'
 rfc3986[idna2008]==1.5.0
+setuptools==63.4.2; python_version >= '3.7'
 sniffio==1.2.0; python_version >= '3.5'
 urllib3==1.26.11; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5' and python_version < '4'
